tests/lean/hygienicIntro.lean.expected.out
hygienicIntro.lean:14:6-14:9: error: unknown identifier 'a_1'
hygienicIntro.lean:24:20-24:21: error: unknown identifier 'h'
hygienicIntro.lean:25:8-25:9: error: unknown identifier 'h'
